[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "aioruckus"
version = "0.44"
description = "Python API to interact with Ruckus Unleashed and ZoneDirector devices"
readme = "README.md"
requires-python = ">=3.12"
license = "0BSD"
license-files = ["LICENSE"]
authors = [
    { name = "Tony Rielly", email = "aioruckus@ms264556.net" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp>=3.9.5",
    "cryptography>=41.0.7",
    "xmltodict>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pylint-pytest>=1.1.7",
    "pylint>=4.0.6",
]

[project]
name = "aioruckus"
version = "0.45"
description = "Python API to interact with Ruckus Unleashed and ZoneDirector devices."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD0"}
authors = [
    {name = "ms264556", email = "bsd0@patterni.city"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp >= 3.8.6",
    "xmltodict >= 0.13.0",
    "cryptography >= 41.0.4",
    "typing_extensions >= 4.1.0; python_version < '3.11'",
    "backports.strenum >= 1.3.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
]
[project.urls]
"Repository" = "https://github.com/ms264556/aioruckus"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pylint.main]
load-plugins = ["pylint_pytest"]

[tool.uv.build-backend]
module-root = ""
