[metadata]
name = aioruckus
version = 0.21
author = ms264556
author_email = bsd0@patterni.city
description = Python API to interact with Ruckus Unleashed and ZoneDirector devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ms264556/aioruckus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license = BSD0
[options]
packages = find:
python_requires = >=3.10
include_package_data = True
